--- a/src/AdministrationBundle/Resources/views/companies/company_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/companies/company_form.html.twig
@@ -372,7 +372,7 @@
 
         {# Contacts block #}
         <h5 ng-cloak>
-            <i class="fa fa-phone fa-fw"></i> {{ ng.translate('COMPANY.CONTACTS') }}
+            <i class="fa fa-comments fa-fw"></i> {{ ng.translate('COMPANY.CONTACTS') }}
         </h5>
         <hr/>
         {% verbatim %}
