--- a/src/AdministrationBundle/Resources/views/stores/store_form.html.twig
+++ b/src/AdministrationBundle/Resources/views/stores/store_form.html.twig
@@ -385,7 +385,7 @@
 
         {# Contacts block #}
         <h5 ng-cloak>
-            <i class="fa fa-phone fa-fw"></i> {{ ng.translate('STORE.CONTACTS') }}
+            <i class="fa fa-comments fa-fw"></i> {{ ng.translate('STORE.CONTACTS') }}
         </h5>
         <hr/>
         {% verbatim %}
