--- a/src/AppBundle/Resources/views/store/information.html.twig
+++ b/src/AppBundle/Resources/views/store/information.html.twig
@@ -35,7 +35,7 @@
             </div>
             <div class="row">
                 <div class="col-md-2 col-xs-4" ng-cloak><label>{{ 'STORE.CODE' | translate }}:</label></div>
-                <div class="col-md-10 col-xs-8" ng-cloak>{{ stores.store().Type.Code }}</div>
+                <div class="col-md-10 col-xs-8" ng-cloak>{{ stores.store().Code }}</div>
             </div>
             <div class="row">
                 <div class="col-md-2 col-xs-4" ng-cloak><label>{{ 'STORE.DESCRIPTION' | translate }}:</label></div>
