--- a/src/AppBundle/Resources/views/store/store.html.twig
+++ b/src/AppBundle/Resources/views/store/store.html.twig
@@ -23,6 +23,9 @@
                     <div ng-switch-when="groupSensors">
                         {% include 'AppBundle:store:group_sensors.html.twig' %}
                     </div>
+                    <div ng-switch-when="notifications">
+                        {% include 'AppBundle:store:notifications.html.twig' %}
+                    </div>
                 </div>
             {% endblock %}
         </div>
