--- a/src/AppBundle/Resources/views/store/dashboard.html.twig
+++ b/src/AppBundle/Resources/views/store/dashboard.html.twig
@@ -51,7 +51,7 @@
     </div>
     <div class="row">
         <div class="col-xs-12 col-md-12 col-lg-12">
-            <div class="panel panel-yellow cursor-pointer" ng-click="">
+            <div class="panel panel-yellow cursor-pointer" ng-click="showNotifications()">
                 <div class="panel-heading">
                     <div class="row">
                         <div class="col-xs-2 text-center big-button-icon">
