--- a/src/NotificationBundle/Resources/views/email/notification.html.twig
+++ b/src/NotificationBundle/Resources/views/email/notification.html.twig
@@ -12,7 +12,7 @@
             <div class="padding well well-sm">
                 <table table="0" cellpadding="0" cellspacing="0">
                     <tr>
-                        <td style="padding-left: 10px;">
+                        <td style="padding-left: 10px; width: 25%;">
                             {{ input.Sensor.Name }}
                         </td>
                         <td>
@@ -39,7 +39,7 @@
                                 </div>
                             {% endif %}
                         </td>
-                        <td>
+                        <td style="text-align: right; padding-right: 10px;">
                             {{ 'email.input.notify-date' | trans}}{{ input.CreatedAt | date('d-m-Y H:i:s') }}
                         </td>
                     </tr>
@@ -52,7 +52,7 @@
                 <div class="padding well well-sm">
                     <table table="0" cellpadding="0" cellspacing="0">
                         <tr>
-                            <td style="padding-left: 10px;">
+                            <td style="padding-left: 10px; width: 25%;">
                                 {{ temperature.Sensor.Name }}
                             </td>
                             <td>
@@ -67,7 +67,7 @@
                                 {{ 'email.temperature.temperature' | trans}}
                                 {{ temperature.Temperature }}
                             </td>
-                            <td>
+                            <td style="text-align: right; padding-right: 10px;">
                                 {{ 'email.temperature.notify-date' | trans}}{{ temperature.CreatedAt | date('d-m-Y H:i:s') }}
                             </td>
                         </tr>
