Changed notification check, added list of super admins that will also be notified, added new store types and company types, aligned the handled user in closed notifcations to right.

--- a/src/AdministrationBundle/Resources/views/notifications/closed_notifications.html.twig
+++ b/src/AdministrationBundle/Resources/views/notifications/closed_notifications.html.twig
@@ -66,7 +66,7 @@
                                                         <td ng-cloak>
                                                             {{ notification.CreatedAt.date | GMT:'DD-MM-YYYY H:mm:ss' }}
                                                         </td>
-                                                        <td>
+                                                        <td class="text-right">
                                                             {{ notification.HandledBy.Name }}
                                                         </td>
                                                         {% endverbatim %}
@@ -123,7 +123,7 @@
                                                         <td ng-cloak>
                                                             {{ notification.CreatedAt.date | GMT:'DD-MM-YYYY H:mm:ss' }}
                                                         </td>
-                                                        <td>
+                                                        <td class="text-right">
                                                             {{ notification.HandledBy.Name }}
                                                         </td>
                                                         {% endverbatim %}
